libs/@local/hashql/hir/tests/ui/lower/specialization/collect-custom-collect.jsonc
//@ run: fail
//@ description: Test minimal graph specialization
[
  "::core::graph::tail::collect",
  [
    ["fn", { "#tuple": [] }, { "#struct": { "graph": "_" } }, "_", "graph"],
    ["::core::graph::head::entities", ["::core::graph::tmp::decision_time_now"]]
  ]
  //~^ ERROR This is not a graph intrinsic operation
]
